--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ nav{
     right: 0%;
     top: 0%;
     bottom: 0%;
-    width: 1440px;
-    height: 100px;
+    width: 1280px;
+    height: 50px;
 }
 
 nav ul{
@@ -56,6 +56,39 @@ nav a{
 }
 
 #SignUp a{
+    color: white;
+    text-decoration: none;
+}
+
+#FirstTrouble{
+    display: block;
+    width: 1280px;
+    height: 700px;
+    text-align: center;
+}
+
+#FirstTrouble h1{
+    font-size: 60px;
+    font-weight: bold;
+    margin: 185px auto auto auto;
+}
+
+#FirstTrouble h4{
+    width: 300px;
+    height: 65px;
+    margin: 32px auto auto auto;
+}
+
+#Start{
+    margin: 32px auto auto auto;
+    background-color: black;
+    align-items: center;
+    height: 22px;
+    width: 230px;
+    border-radius: 5px;
+}
+
+#Start a {
     color: white;
     text-decoration: none;
 }
