--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
+body{
+    background-color: lightgray;
+    margin: 0;
+}
 nav{
     position:absolute;
     left: 0%;
     right: 0%;
     top: 0%;
     bottom: 0%;
-    width: 1440px;
-    height: 100px;
+    width: 1280px;
+    height: 50px;
 }
 
 nav ul{
@@ -40,13 +44,13 @@ nav a{
     display: inline;
     position: absolute;
     top: 10px;
-    left: 1100px;
+    left: 1098px;
 }
 
 #SignUp{
     display: inline;
     position: absolute;
-    left: 1250px;
+    left: 1248px;
     top: 10px;
     background-color: black;
     text-align: center;
@@ -58,5 +62,241 @@ nav a{
 #SignUp a{
     color: white;
     text-decoration: none;
+}
+
+#FirstTrouble{
+    background: url(img/background.png);
+    background-size: 50%;
+    background-repeat: no-repeat;
+    display: block;
+    width: 1280px;
+    height: 400px;
+    text-align: center;
+}
+
+#FirstTrouble h1{
+    font-size: 60px;
+    font-weight: bold;
+    margin: 185px auto auto auto;
+}
+
+#FirstTrouble h4{
+    width: 300px;
+    height: 65px;
+    margin: 32px auto auto auto;
+}
+
+#Start{
+    margin: 32px auto auto auto;
+    background-color: black;
+    align-items: center;
+    height: 40px;
+    width: 230px;
+    border-radius: 5px;
+    padding-top: 15px;
+}
+
+#Start a {
+    color: white;
+    text-decoration: none;
+    font-size: 25px;
+}
+
+.SecondTrouble{
+    display: block;
+    width: 1280px;
+    height: 200px;
+    text-align: center;
+}
+
+.SecondTrouble h6{
+    margin-top: 10px;
+}
+
+#Plan{
+    display: block;
+    width: 1280px;
+    height: 550px;
+    text-align: center;
+}
+
+#Plan .block{
+    display: inline-block;
+    height: 200px;
+    width: 200px;
+    left: 100px;
+    align-items: center;
+    margin-right: 15px;
+
+    background-color: black;
+}
+
+.rectangle-{
+    display: inline-block;
+    position: absolute;
+    width: 64px;
+    height: 64px;
+    margin-top: 66px;
+    margin-left: -30px;
+
+    background: white;
+    border-radius: 8px;
+}
+
+.circle{
+    height: 64px;
+    width: 64px;
+    margin-top: 66px;
+    margin-left: 66px;
+
+    background-color: white;
+    border-radius: 32px;
+}
+
+.rectangle{
+    height: 64px;
+    width: 64px;
+
+    margin-top: 66px;
+    margin-left: 66px;
+
+    background-color: white;
+}
+
+.desc{
+    display: inline-block;
+    width: 200px;
+    height: 140px;
+    text-align: left;
+    font-size: 19px;
+
+    margin-right: 15px;
+    margin-top: -4px;
+    background-color: rgb(227, 220, 207);
+}
+
+.desc p{
+    padding-left: 10px;
+    padding-bottom: 40px;
+}
+
+.desc h6{
+    margin: 0;
+    padding-left: 10px;
+}
+
+.desc a{
+    font-size: 15px;
+    color: black;
+    text-decoration: none;
+}
+
+#article{
+    width: 1280px;
+    height: 440px;
+
+    display: block;
+    
+}
+
+#MainArticle{
+    display: block;
+    background-color: black;
+
+    margin: -30px 0px 30px 50px;
+    margin-left: 150px;
+    width: 1000px;
+    height: 200px;
+}
+
+#MainArticle a{
+    margin-left: 320px;
+    text-decoration: none;
+    color: white;
+}
+
+#MainArticle p {
+    color: white;
+    margin-top: -180px;
+    
+}
+
+#MainArticle h1{
+    width: 300px;
+}
+
+#MainArticle p{
+    color: white;
+    margin-left: 320px;
+}
+
+#MainArticle h1{
+    color: white;
+    margin-left: 320px;
+}
+
+#quarter{
+    display: block;
+    width: 280px;
+    height: 200px;
+
+    background-color: gray;
+}
+
+.SecondArticle{
+    display: inline-block;
+    position: absolute;
+    width: 480px;
+    height: 150px;
+    text-align: left;
+    padding-left: 5px;
+
+    left: 160px;
+    margin-right: 30px;
+    background-color: rgb(247, 242, 231);
+}
+
+.SecondArticle a{
+    text-decoration: none;
+    color: black;
+}
+
+input{
+    display: block;
+    margin-top: 10px;
+    
+    height: 50px;
+    font-size: 15px;
+    border: 2px solid black;
+    border-radius: 5px;
+}
+
+#Form{
+    margin-left: 550px;
+}
+
+footer{
+    display: block;
+    height: 200px;
+    margin-top: 100px;
+}
+
+footer ul{
+    display: inline;
+}
+
+footer ul li{
+    display: inline;
+    margin-right: 100px;
+}
+
+footer a{
+    text-decoration: none;
+    color: black;
+}
+
+#logo{
+    display: inline;
+
 }
 
